--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,7 +26,7 @@
     <string name="room_name">Name</string>
     <string name="room_password">Password (Optional)</string>
 
-    <string name="room_title_param">room_title</string>
+    <string name="room_index_param">room_index</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
